# ai-news-agg

./: .gitignore  pyproject.toml
app/ingestion/: youtube.py
